Closed
Bug 694360
Opened 12 years ago
Closed 12 years ago
Permit unicode escape sequences in keywords (thi\u0073 is a keyword, not an identifier)
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla10
People
(Reporter: jorendorff, Assigned: evilpie)
Details
Attachments
(1 file)
7.26 KB,
patch
|
jorendorff
:
review+
|
Details | Diff | Splinter Review |
This should be a SyntaxError: var thi\u0073; Currently we permit it and actually declare a variable named "this" (although we ban it in strict mode, apparently by accident rather than by design). See discussion here: https://mail.mozilla.org/pipermail/es-discuss/2011-June/015389.html The most persuasive response was Allen Wirfs-Brock's interpretation of ES5: https://mail.mozilla.org/pipermail/es-discuss/2011-June/015422.html No one really disagreed.
Assignee | ||
Comment 1•12 years ago
|
||
Attachment #567474 -
Flags: review?(jorendorff)
Reporter | ||
Comment 2•12 years ago
|
||
Comment on attachment 567474 [details] [diff] [review] v1 detect unicode escaped keywords throws() has a bug: if eval(code) does not throw, the test passes. r=me with that fixed. Thanks!
Attachment #567474 -
Flags: review?(jorendorff) → review+
Assignee | ||
Comment 3•12 years ago
|
||
http://hg.mozilla.org/integration/mozilla-inbound/
Assignee | ||
Updated•12 years ago
|
Assignee: general → evilpies
Comment 4•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/56c27cde0643
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
You need to log in
before you can comment on or make changes to this bug.
Description
•