Bug 694360 - Don't allow keywords with unicode escapes. r=jorendorff