js/src/tests/ecma_3/Unicode/uc-003.js
@@ -47,7 +47,6 @@ function test()
 
   var \u0041 = 5;
   var A\u03B2 = 15;
-  var c\u0061se = 25;
 
   printStatus ("Escapes in identifiers test.");
   printBugNumber (23608);
@@ -61,10 +60,6 @@ function test()
 		 "Escaped non-ASCII Identifier test");
   reportCompare (16, eval("++A\u03B2"),
 		 "Escaped non-ASCII Identifier test");
-  reportCompare (25, eval("c\\u00" + "61se"),
-		 "Escaped keyword Identifier test");
-  reportCompare (26, eval("++c\\u00" + "61se"),
-		 "Escaped keyword Identifier test");
    
   exitFunc ("test");
 }
